# z-Explorer

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  env.example  install.ps1  install.sh  pyproject.toml
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/_cfg/ides/: claude-code.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.github/workflows/: docker.yml  quality-gate.yml
assets/: preview.html
docs/: CONFIGURATION.md  api-contracts-backend.md  architecture-backend.md  architecture-gui.md  architecture.md  bmm-workflow-status.yaml  index.md  integration-architecture.md  prd.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
docs/analysis/: brainstorming-session-2025-12-02.md  future-features-brainstorm.md  implementation-plan-future-features.md  implementation-plan-prompt-operators.md  prompt-operators-brief.md
docs/mistral/: MIGRATION_GUIDE.md
docs/prompt-scratchpad/: enhance_prompt_v1_original.md  enhance_prompt_v2_pyro.md  enhance_prompt_v3_refined.md  enhance_prompt_v4_final.md  generate_variable_values_proposed.md
docs/specs/: README.md
docs/specs/001-ui-settings-improvements/: README.md  implementation-plan.md  product-requirements.md  solution-design.md
docs/specs/002-info-flyout-metadata/: README.md  implementation-plan.md  product-requirements.md  solution-design.md
docs/specs/003-gallery-search/: README.md  implementation-plan.md  product-requirements.md  solution-design.md
docs/specs/004-litellm-integration/: README.md  implementation-plan.md  product-requirements.md  solution-design.md
docs/specs/005-variable-editor/: README.md  implementation-plan.md  product-requirements.md  solution-design.md
docs/specs/006-lora-support/: README.md  implementation-plan.md  product-requirements.md  solution-design.md
src/z_explorer/: __init__.py  cli.py  globals.py  image_generator.py  llm_provider.py  model_config.py  server.py  setup_wizard.py
src/z_explorer/core/: __init__.py  generator.py  types.py
src/z_explorer/gui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src/z_explorer/models/: prompt_vars.py
tests/: __init__.py  conftest.py  test_cli.py  test_image_generator.py  test_llm_provider.py  test_model_config.py
tests/scripts/: enhance_prompt.py  generate_prompt_variable_values.py
tests/test_core/: __init__.py  test_generator.py  test_types.py
tests/test_server/: __init__.py  test_endpoints.py  test_model_settings.py
tests/test_services/: __init__.py  test_download.py
(+26 files in other folders)
